# binary_man

./: .gitignore  BUGS.md  Cargo.toml  DESIGN.md  LANGUAGE.md  README.md  clippy.toml  flake.nix
docs/: COVERAGE.md  DEV.md  MILESTONES.md  SCHEMAS.md  coreutils-validation.json
fixtures/: SOURCES.md  access_log.txt  config.txt  data.csv  dates.txt  formatted.txt  naughty.txt  passwd.txt  paths.txt  syslog.txt  words.txt
prompts/: README.md  behavior_base.md  behavior_reason_assertion_failed.md  behavior_reason_initial_scenarios.md  behavior_reason_no_scenario.md  behavior_reason_outputs_equal.md  behavior_reason_outputs_equal_retry.md  behavior_reason_unified.md  enrich_agent_prompt.md  judge_behavior.md  judge_behavior_v2.md  prereq_inference.md
queries/: README.md  ls_usage_evidence.sql  options_from_scenarios.sql  subcommands_from_probes.sql  subcommands_from_scenarios.sql  surface_from_scenarios.sql  usage_from_probes.sql  usage_from_scenarios.sql  usage_from_scoped_usage_functions.sql  verification_from_scenarios.sql
scenarios/: ls.json  plan.json
schema/: invocation.v0.json
src/: analyze.rs  claims.rs  cli.rs  data.rs  discover.rs  docpack.rs  enrich.rs  execute.rs  inspect.rs  inspect_tui.rs  invocation.rs  lib.rs  lm.rs  main.rs  output.rs  pack.rs  parse.rs  refine.rs  render.rs  report.rs  sandbox.rs  scenario.rs  scenarios.rs  schema.rs  semantics.rs  staging.rs  status.rs  surface.rs  templates.rs  util.rs  validate.rs  verification_progress.rs  workflow.rs
templates/: README.md  binary_lens_export_plan.json  enrich_semantics.json  scenarios_plan.json
tests/: coreutils.sh  git_config.rs  ls.rs  mock-lm.sh  validate_integration.rs
tools/: analyze_run.py  (+5 more)
tools/eval/: Cargo.toml  REPORT_TEMPLATE.md
tools/eval/configs/: corpus_v0.toml  cross_binary.toml  e10_value_hint_join.toml  e11_full_matrix.toml  e12_invocation_hint.toml  e5_auto_repair.toml  e6_zero_byte_diagnostic.toml  e7_raw_transcripts.toml  e8_char_logs.toml  e9_batch_critique.toml  experiment.toml
tools/eval/prompts/: batch_probe_critique.md
tools/eval/src/: baseline.rs  compare.rs  display.rs  main.rs  matrix.rs  runner.rs  stats.rs  summary.rs
(+279 files in other folders)
