[package]
name = "binary-man"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Static man page generator from binary_lens packs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
sha2 = "0.10"
ratatui = "0.26"
crossterm = "0.27"
shell-words = "1.1"
chrono = "0.4"

[[bin]]
name = "bman"
path = "src/main.rs"

[lints.clippy]
# Deny all clippy warnings - fail the build on any warning
all = "deny"
