[package]
name = "bman"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Observation-driven behavioral specification for CLI binaries"

[dependencies]
anyhow = "1.0"
libc = "0.2"
regex = "1.10"
tempfile = "3.14"
which = "7.0"

[[bin]]
name = "bman"
path = "src/main.rs"

[lints.clippy]
all = "deny"
