[package]
name = "bman-eval"
version = "0.1.0"
edition = "2021"
description = "A/B testing harness for bman verification"

[[bin]]
name = "bman-eval"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"

[lints.clippy]
all = "deny"
